--- a/app/src/main/res/layout/fragment_feed.xml
+++ b/app/src/main/res/layout/fragment_feed.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#e0f4f5"
     tools:context=".view.FeedFragment">
 
 
@@ -11,7 +12,7 @@
         android:id="@+id/toolbarFeed"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary"
+        android:background="#033540"
         android:minHeight="?attr/actionBarSize"
         app:title="İtiraflar"
         android:theme="?attr/actionBarTheme"
@@ -33,10 +34,13 @@
         android:id="@+id/buttonFAB"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
         android:src="@drawable/ic_baseline_add_24"
+        app:backgroundTint="#033540"
+        app:tint="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"/>
+        app:rippleColor="#033540" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
