--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -25,6 +25,9 @@
             android:id="@+id/action_feedFragment_to_postFragment"
             app:destination="@id/postFragment"
             app:enterAnim="@android:anim/fade_in" />
+        <action
+            android:id="@+id/action_feedFragment_to_feedBottomSheetFragment"
+            app:destination="@id/feedBottomSheetFragment" />
     </fragment>
     <fragment
         android:id="@+id/postFragment"
@@ -42,4 +45,9 @@
             app:popUpTo="@id/postFragment"
             app:popUpToInclusive="true" />
     </fragment>
+    <dialog
+        android:id="@+id/feedBottomSheetFragment"
+        android:name="com.ugurcangal.itirafet.view.bottomsheet.FeedBottomSheetFragment"
+        android:label="fragment_feed_bottom_sheet"
+        tools:layout="@layout/fragment_feed_bottom_sheet" />
 </navigation>
