--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -49,5 +49,9 @@
         android:id="@+id/feedBottomSheetFragment"
         android:name="com.ugurcangal.itirafet.view.bottomsheet.FeedBottomSheetFragment"
         android:label="fragment_feed_bottom_sheet"
-        tools:layout="@layout/fragment_feed_bottom_sheet" />
+        tools:layout="@layout/fragment_feed_bottom_sheet" >
+        <argument
+            android:name="postText"
+            app:argType="string" />
+    </dialog>
 </navigation>
