--- a/app/src/main/res/layout/fragment_post.xml
+++ b/app/src/main/res/layout/fragment_post.xml
@@ -22,22 +22,33 @@
         app:layout_constraintTop_toTopOf="parent"
         app:title="Yeni Gönderi Oluştur" />
 
+
+    <ImageView
+        android:id="@+id/logoImage"
+        android:layout_width="250dp"
+        android:layout_height="150dp"
+        android:layout_marginTop="110dp"
+        android:src="@drawable/logo"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:tint="#FF033540" />
+
     <EditText
         android:id="@+id/postEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
-        android:layout_marginBottom="100dp"
+        android:layout_marginTop="70dp"
         android:padding="30dp"
         android:hint="İtiraf Ediyorum..."
         android:textColorHint="@color/black"
         android:fontFamily="@font/louis"
         android:background="@drawable/edittextbackground"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/toolbarPost" />
+        app:layout_constraintTop_toBottomOf="@id/logoImage" />
 
 
     <Button
