--- a/app/src/main/res/layout/fragment_feed_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_feed_bottom_sheet.xml
@@ -9,6 +9,7 @@
     tools:context=".view.bottomsheet.FeedBottomSheetFragment">
 
     <TextView
+        android:id="@+id/yorumlarText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Yorumlar:"
@@ -21,37 +22,43 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/commentRecyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="40dp"
-        android:layout_marginBottom="10dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/commentEditText"/>
-
     <EditText
         android:id="@+id/commentEditText"
-        android:layout_width="match_parent"
+        android:layout_width="270dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="120dp"
+        android:paddingStart="20dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:layout_marginStart="10dp"
+        android:textColorHint="#033540"
+        android:layout_marginEnd="120dp"
         android:hint="Yorumunu Yaz!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@id/yorumlarText"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
     <Button
         android:id="@+id/buttonYorumGonder"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="go"
+        android:text="gönder"
         android:textColor="@color/white"
-        android:layout_marginRight="5dp"
+        android:layout_marginEnd="10dp"
         android:backgroundTint="#033540"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/commentEditText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintLeft_toRightOf="@id/commentEditText"/>
+
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/commentRecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="260dp"
+        android:layout_marginTop="20dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/commentEditText"
+        app:layout_constraintBottom_toBottomOf="parent"
+        />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
