--- a/app/src/main/res/layout/fragment_post.xml
+++ b/app/src/main/res/layout/fragment_post.xml
@@ -6,7 +6,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#e0f4f5"
-
     tools:context=".view.PostFragment">
 
 
@@ -32,7 +31,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:tint="#FF033540" />
+        app:tint="#FF033540"
+        android:contentDescription="@string/tiraf_et_logo" />
 
     <EditText
         android:id="@+id/postEditText"
@@ -43,8 +43,9 @@
         android:layout_marginTop="70dp"
         android:padding="30dp"
         android:hint="İtiraf Ediyorum..."
+        android:maxLines="5"
         android:textColorHint="@color/black"
-        android:fontFamily="@font/louis"
+        android:fontFamily="sans-serif-condensed"
         android:background="@drawable/edittextbackground"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -65,7 +66,7 @@
     <com.google.android.material.button.MaterialButton
         android:id="@+id/buttonLogout"
         android:layout_width="228dp"
-        android:layout_height="47dp"
+        android:layout_height="37dp"
         android:layout_marginBottom="30dp"
         android:background="@drawable/edittextbackground"
         android:text="Hesaptan Çıkış Yap"
