commentlar için post id düzeltildi

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -51,7 +51,7 @@
         android:label="fragment_feed_bottom_sheet"
         tools:layout="@layout/fragment_feed_bottom_sheet" >
         <argument
-            android:name="postText"
+            android:name="postId"
             app:argType="string" />
     </dialog>
 </navigation>
