--- a/app/src/main/res/layout/fragment_post.xml
+++ b/app/src/main/res/layout/fragment_post.xml
@@ -24,7 +24,7 @@
 
     <ImageView
         android:id="@+id/logoImage"
-        android:layout_width="250dp"
+        android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_marginTop="110dp"
         android:src="@drawable/logo"
@@ -41,9 +41,9 @@
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
         android:layout_marginTop="70dp"
-        android:padding="30dp"
+        android:padding="50dp"
         android:hint="İtiraf Ediyorum..."
-        android:maxLines="5"
+        android:maxLines="7"
         android:textColorHint="@color/black"
         android:fontFamily="sans-serif-condensed"
         android:background="@drawable/edittextbackground"
@@ -54,21 +54,25 @@
 
     <Button
         android:id="@+id/buttonPaylas"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:padding="10dp"
         android:text="paylaş"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@id/postEditText"
+        app:layout_constraintStart_toStartOf="@id/postEditText"
         app:layout_constraintTop_toBottomOf="@id/postEditText" />
 
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/buttonLogout"
-        android:layout_width="228dp"
-        android:layout_height="37dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
         android:layout_marginBottom="30dp"
-        android:background="@drawable/edittextbackground"
+        android:backgroundTint="#792121"
         android:text="Hesaptan Çıkış Yap"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
