--- a/app/src/main/res/drawable/edittextbackground.xml
+++ b/app/src/main/res/drawable/edittextbackground.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <solid
-        android:color="#a7d1d2" />
-    <stroke android:width="2dp"
-        android:color="#033540"/>
+
+    <stroke android:width="1dp"
+        android:color="#2F8883"/>
     <corners android:radius="5dp"/>
 
 </shape>
