--- a/app/src/main/res/layout/comment_design.xml
+++ b/app/src/main/res/layout/comment_design.xml
@@ -2,8 +2,8 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardCornerRadius="5dp"
-    android:backgroundTint="#63898C"
+    app:cardCornerRadius="10dp"
+    android:backgroundTint="@color/dark_main_color"
     android:layout_margin="10dp"
     android:layout_height="wrap_content">
 
@@ -17,7 +17,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Bu bir Yorumdur"
-            android:fontFamily="sans-serif-condensed"
+            android:fontFamily="@font/light"
             android:textSize="16sp"
             android:textColor="@color/white"
             android:layout_marginLeft="10dp"
