--- a/app/src/main/res/layout/fragment_feed_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_feed_bottom_sheet.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#e0f4f5"
+    android:background="@drawable/bg_gradient"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".view.bottomsheet.FeedBottomSheetFragment">
 
@@ -15,14 +15,14 @@
         android:text="Yorumlar:"
         android:textSize="20sp"
         android:textStyle="bold"
-        android:textColor="#033540"
+        android:textColor="@color/dark_main_color"
         android:fontFamily="sans-serif-condensed"
         android:layout_marginTop="5dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
 
-    <EditText
+    <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/commentEditText"
         android:layout_width="270dp"
         android:layout_height="wrap_content"
@@ -30,21 +30,21 @@
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
         android:layout_marginStart="10dp"
-        android:textColorHint="#033540"
+        android:textColorHint="@color/dark_main_color"
         android:layout_marginEnd="120dp"
         android:hint="Yorumunu Yaz!"
         app:layout_constraintTop_toBottomOf="@id/yorumlarText"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/buttonYorumGonder"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="gönder"
-        android:textColor="@color/white"
+        android:textColor="@color/dark_main_color"
         android:layout_marginEnd="10dp"
-        android:backgroundTint="#033540"
+        android:backgroundTint="@color/white"
         app:layout_constraintBottom_toBottomOf="@id/commentEditText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintLeft_toRightOf="@id/commentEditText"/>
