--- a/app/src/main/res/layout/fragment_post.xml
+++ b/app/src/main/res/layout/fragment_post.xml
@@ -2,13 +2,35 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/frameLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#e0f4f5"
+    android:background="@drawable/bg_gradient"
     tools:context=".view.PostFragment">
 
 
+    <TextView
+        android:id="@+id/newPostText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="56dp"
+        android:fontFamily="@font/light"
+        android:text="Yeni Gönderi Oluştur"
+        android:textColor="@color/dark_main_color"
+        android:textSize="28sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <View
+        android:id="@+id/line1"
+        android:layout_width="345dp"
+        android:layout_height="2dp"
+        android:background="@drawable/line_7"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/newPostText" />
+
+    <!-- -
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbarPost"
         android:layout_width="0dp"
@@ -20,60 +42,79 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:title="Yeni Gönderi Oluştur" />
+        <!- -->
 
 
     <ImageView
         android:id="@+id/logoImage"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:layout_marginTop="110dp"
+        android:layout_width="194dp"
+        android:layout_height="94dp"
+        android:layout_marginTop="65dp"
         android:src="@drawable/logo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:tint="#FF033540"
-        android:contentDescription="@string/tiraf_et_logo" />
+        app:layout_constraintTop_toBottomOf="@id/line1"
+        app:tint="#2F8883" />
+
+    <TextView
+        android:id="@+id/itirafEdiyorumText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:fontFamily="@font/poppins_medium"
+        android:text="İtiraf Ediyorum..."
+        android:textColor="@color/black"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toTopOf="@id/postEditText"
+        app:layout_constraintStart_toStartOf="@id/postEditText" />
 
     <EditText
         android:id="@+id/postEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="30dp"
+        android:layout_marginTop="68dp"
         android:layout_marginRight="30dp"
-        android:layout_marginTop="70dp"
-        android:padding="50dp"
-        android:hint="İtiraf Ediyorum..."
-        android:maxLines="7"
-        android:textColorHint="@color/black"
-        android:fontFamily="sans-serif-condensed"
         android:background="@drawable/edittextbackground"
+        android:drawableStart="@drawable/edittext_icon"
+        android:fontFamily="sans-serif-condensed"
+        android:maxLines="7"
+        android:padding="40dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/logoImage" />
 
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/buttonPaylas"
-        android:layout_width="match_parent"
+        android:layout_width="174dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
         android:layout_marginLeft="30dp"
+        android:layout_marginTop="30dp"
         android:layout_marginRight="30dp"
-        android:padding="10dp"
-        android:text="paylaş"
+        android:fontFamily="@font/light"
+        android:padding="14dp"
+        android:text="Paylaş"
+        android:textAllCaps="false"
+        app:cornerRadius="10dp"
         app:layout_constraintEnd_toEndOf="@id/postEditText"
         app:layout_constraintStart_toStartOf="@id/postEditText"
         app:layout_constraintTop_toBottomOf="@id/postEditText" />
 
-
-    <com.google.android.material.button.MaterialButton
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/buttonLogout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="10dp"
         android:layout_marginBottom="30dp"
-        android:backgroundTint="#792121"
+        android:background="@drawable/logout_bg"
+        android:fontFamily="@font/light"
+        android:outlineSpotShadowColor="@color/black"
+        android:padding="14dp"
+        android:shadowColor="@color/black"
+        android:shadowRadius="200"
         android:text="Hesaptan Çıkış Yap"
+        android:textAllCaps="false"
+        android:textColor="#2F8883"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
