--- a/app/src/main/res/layout/post_design.xml
+++ b/app/src/main/res/layout/post_design.xml
@@ -7,13 +7,13 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="20dp"
-    app:cardCornerRadius="10dp"
-    android:backgroundTint="#63898C"
+    app:cardCornerRadius="5dp"
     app:layout_constraintStart_toStartOf="parent">
 
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@drawable/edittextbackground"
     android:orientation="vertical">
 
 
@@ -22,9 +22,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="DENEMEDENEMEDENEDENEMEDENEMEDENEMEDENEMEMEDENEMEDENEME"
-            android:fontFamily="sans-serif-condensed"
-            android:textStyle="bold"
-            android:textColor="@color/white"
+            android:fontFamily="@font/poppins_regular"
+            android:textStyle="normal"
+            android:textColor="@color/black"
             android:textAlignment="center"
             android:layout_marginTop="10dp"
             android:layout_marginRight="30dp"
@@ -42,8 +42,8 @@
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Yorumlar"
-                   android:textColor="#033540"
-                   android:fontFamily="sans-serif-condensed"
+                   android:textColor="@color/dark_main_color"
+                   android:fontFamily="@font/poppins_regular"
                    android:textStyle="bold"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
@@ -57,8 +57,8 @@
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="zaman"
-                   android:textColor="@color/white"
-                   android:fontFamily="@font/louis"
+                   android:textColor="@color/dark_main_color"
+                   android:fontFamily="@font/poppins_regular"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
