--- a/app/src/main/res/layout/fragment_post.xml
+++ b/app/src/main/res/layout/fragment_post.xml
@@ -71,15 +71,16 @@
     <EditText
         android:id="@+id/postEditText"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="100dp"
         android:layout_marginLeft="30dp"
         android:layout_marginTop="68dp"
         android:layout_marginRight="30dp"
+        android:padding="10dp"
         android:background="@drawable/edittextbackground"
-        android:drawableStart="@drawable/edittext_icon"
+        android:drawableStart="@drawable/logo_person"
         android:fontFamily="sans-serif-condensed"
         android:maxLines="7"
-        android:padding="40dp"
+
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/logoImage" />
