--- a/app/src/main/res/layout/post_design.xml
+++ b/app/src/main/res/layout/post_design.xml
@@ -1,20 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<androidx.cardview.widget.CardView
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/card"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="20dp"
+    android:layout_margin="10dp"
     app:cardCornerRadius="5dp"
     app:layout_constraintStart_toStartOf="parent">
 
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/edittextbackground"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintTop_toTopOf="parent">
 
 
         <TextView
@@ -35,6 +37,7 @@
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_marginBottom="5dp"
+           android:layout_marginTop="10dp"
            android:layout_height="match_parent">
 
                <com.google.android.material.textview.MaterialTextView
@@ -69,7 +72,15 @@
 
        </androidx.constraintlayout.widget.ConstraintLayout>
 
+    <View
+        android:id="@+id/line1"
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:background="@drawable/line_7" />
+
 
 
 </LinearLayout>
-</androidx.cardview.widget.CardView>
+</androidx.constraintlayout.widget.ConstraintLayout>
