--- a/app/src/main/res/layout/post_design.xml
+++ b/app/src/main/res/layout/post_design.xml
@@ -40,18 +40,18 @@
            android:layout_marginTop="10dp"
            android:layout_height="match_parent">
 
-           <TextView
-               android:id="@+id/likeCount"
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-               android:text="100"
-               android:textSize="14sp"
-               android:textColor="@color/dark_main_color"
-               android:fontFamily="@font/light"
-               android:textStyle="bold"
-               app:layout_constraintEnd_toStartOf="@id/postLike"
-               app:layout_constraintTop_toTopOf="@id/postLike"
-               android:layout_marginRight="10dp"/>
+<!--           <TextView-->
+<!--               android:id="@+id/likeCount"-->
+<!--               android:layout_width="wrap_content"-->
+<!--               android:layout_height="wrap_content"-->
+<!--               android:text="100"-->
+<!--               android:textSize="14sp"-->
+<!--               android:textColor="@color/dark_main_color"-->
+<!--               android:fontFamily="@font/light"-->
+<!--               android:textStyle="bold"-->
+<!--               app:layout_constraintEnd_toStartOf="@id/postLike"-->
+<!--               app:layout_constraintTop_toTopOf="@id/postLike"-->
+<!--               android:layout_marginRight="10dp"/>-->
 
 
            <androidx.appcompat.widget.AppCompatImageView
